@startuml

title __DYNAMIC_FRAGMENT's Class Diagram__\n

  namespace com.example.dynamic_fragment {
    class com.example.dynamic_fragment.BlankFragment {
        {static} - ARG_PARAM1 : String
        {static} - ARG_PARAM2 : String
        - btnClose : Button
        - fragmentView : View
        - leftView : LinearLayout
        - mParam1 : String
        - mParam2 : String
        + BlankFragment()
        {static} + newInstance()
        + onCreate()
        + onCreateView()
        + onDestroy()
        - backToMaxScreen()
        - bindEvent()
        - initView()
    }
  }
  

  namespace com.example.dynamic_fragment {
    class com.example.dynamic_fragment.MainActivity {
        - btnShow : Button
        - leftView : LinearLayout
        # onCreate()
        - bindEvent()
        - initView()
    }
  }
  

  com.example.dynamic_fragment.BlankFragment -up-|> androidx.fragment.app.Fragment
  com.example.dynamic_fragment.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
